--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -11,7 +13,7 @@ html {
 body {
   background: url('../close-up-view-clouds_181624-13889.png') repeat-x center/cover;
   width: 100%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", "Helvetica";
 }
 
 body::before {
@@ -40,7 +42,7 @@ body::before {
   padding-bottom: 1rem;
   min-width: 45rem;
   min-height: 20rem;
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem 1.5rem 2rem 1.5rem;
   justify-content: space-evenly;
   background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
   backdrop-filter: blur(10px);
@@ -73,10 +75,16 @@ h2 {
 }
 
 #main {
-  font-size: 2rem;
+  /* font-size: 3rem; */
   color: #fff;
   /* margin-left: 1.4rem; */
+  text-align: center;
 }
+
+#main p {
+  font-size: 2.2rem;
+}
+
 .metric {
   color: #fff;
 }
@@ -117,6 +125,11 @@ p {
 
 .side {
   color: #eee;
+  /* text-align: center; */
+}
+
+.side p {
+  font-size: 1.8rem;
 }
 
 #title {
@@ -137,7 +150,7 @@ p {
   grid-template-columns: repeat(4, auto);
   grid-template-rows: auto;
   /* grid-auto-flow: column; */
-  row-gap: 2rem;
+  row-gap: 1.5rem;
 }
 .hourly--data {
   /* margin: 1rem 0 0 3rem; */
@@ -146,9 +159,7 @@ p {
   /* border-bottom: 1px solid #fff; */
   margin-top: 1rem;
 }
-hr {
-  width: 100%;
-}
+
 .hourly--data:nth-child(5n), .hourly--data:last-child {
   border-right: none;
 }
@@ -189,8 +200,11 @@ button {
   padding: 1rem;
   border-radius: 1rem;
   cursor: pointer;
+  width: 38%;
 }
 
 button:active {
   background-color: rgb(0, 80, 209);
 }
+
+
