--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,20 @@ body::before {
   height: 100vh;
 }
 
+.container {
+  /* border-radius: 2rem; */
+  background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+  backdrop-filter: blur(10px);
+  /* box-shadow: 0 0 10px rgb(255, 255, 255); */
+  padding: 3rem;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 #current {
   border-radius: 2rem;
   padding-bottom: 1rem;
@@ -45,7 +59,7 @@ body::before {
   padding: 0.5rem 1.5rem 2rem 1.5rem;
   justify-content: space-evenly;
   background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
-  backdrop-filter: blur(10px);
+  /* backdrop-filter: blur(10px); */
   box-shadow: 0 0 10px rgb(255, 255, 255);
 }
 
@@ -139,7 +153,7 @@ p {
 }
 #forecast {
   background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
-  backdrop-filter: blur(10px);
+  /* backdrop-filter: blur(10px); */
   box-shadow: 0 0 10px rgb(255, 255, 255);
   min-width: 60rem;
   min-height: 12rem;
@@ -174,14 +188,17 @@ p {
 
 input {
   width: 100%;
-  border-radius: 1rem;
+  border-radius: 5rem 0 0 5rem;
   padding: 1rem;
   border: none;
-  margin-right: 1rem;
+  /* margin-right: 1rem; */
   background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
   backdrop-filter: blur(10px);
-  box-shadow: 0 0 4px rgb(255, 255, 255);
   color: #fff;
+}
+
+input:hover {
+  box-shadow: 0 0 4px rgb(255, 255, 255);
 }
 
 input::placeholder {
@@ -198,9 +215,9 @@ button {
   color: #fff;
   border: none;
   padding: 1rem;
-  border-radius: 1rem;
+  border-radius: 0 5rem 5rem 0;
   cursor: pointer;
-  width: 38%;
+  width: 20%;
 }
 
 button:active {
