--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,8 @@ body::before {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.35);
 }
 
@@ -44,7 +44,6 @@ body::before {
 .container {
   /* border-radius: 2rem; */
   /* background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0)); */
-  /* backdrop-filter: blur(5px); */
   /* box-shadow: 0 0 10px rgb(255, 255, 255); */
   padding: 3rem;
   width: 100%;
@@ -199,6 +198,7 @@ input {
   background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
   backdrop-filter: blur(10px);
   color: #fff;
+  text-indent: 10px;
 }
 hr {
   width: 50%;
