--- a/src/App.css
+++ b/src/App.css
@@ -231,4 +231,62 @@ button:active {
   background-color: rgb(0, 80, 209);
 }
 
+.about {
+  height: 100vh;
+  width: 100%;
+  background: url('../about.png') no-repeat center/cover;
+  color: #ddd;
+ 
+  display: flex;
+  justify-content:center;
+  align-items:center;
+  flex-direction: column;
+}
+
+.about > * {
+  z-index: 10;
+  /* margin: 1.5rem; */
+}
+
+#about {
+   padding: 20rem;
+}
+
+h1{
+  font-size: 5rem;
+}
+
+.about::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  backdrop-filter: blur(5px);
+  background: rgba(0, 0, 0, 0.35);
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 8vh;
+  border-bottom: 1px solid #ccc;
+  z-index: 50;
+}
+
+li {
+  list-style: none;
+  display: inline;
+  margin: 0 5rem 0 5rem;
+}
+
+li > * {
+  text-decoration: none;
+  font-size: 2rem;
+  color: #fff;
+}
+
 
