--- a/src/App.css
+++ b/src/App.css
@@ -263,7 +263,7 @@ h1{
   left: 0;
   width: 100vw;
   height: 100vh;
-  backdrop-filter: blur(5px);
+  /* backdrop-filter: blur(1px); */
   background: rgba(0, 0, 0, 0.35);
 }
 
